# tipalti

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agex/data/pr/: events.jsonl
.claude/: skills.local.yaml.example
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/gh-issues/: SKILL.md
.claude/skills/notebooklm/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/pypi-maintainer/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/sonarclaude/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.github/workflows/: publish.yml  tests.yml
docs/: skill-sources.md
docs/superpowers/plans/: 2026-05-20-read-only-nouns-v0.2.0.md
docs/superpowers/specs/: 2026-05-20-tipalti-read-only-nouns-design.md
tests/: conftest.py  test_api_auth.py  test_api_client.py  test_api_env.py  test_api_errors.py  test_cli_bill.py  test_cli_custom_field.py  test_cli_gl_account.py  test_cli_invoice.py  test_cli_learn.py  test_cli_payee.py  test_cli_payer_entity.py  test_cli_payment.py  test_cli_payment_term.py  test_cli_smoke.py  test_cli_tax_code.py  test_cli_whoami.py
tipalti/: __init__.py  __main__.py
tipalti/api/: __init__.py  _env.py  auth.py  client.py  errors.py
tipalti/cli/: __init__.py  _errors.py  _listing.py  _output.py
tipalti/cli/_commands/: bill.py  custom_field.py  explain.py  gl_account.py  invoice.py  learn.py  payee.py  payer_entity.py  (+4 more)
tipalti/explain/: __init__.py  catalog.py
(+11 files in other folders)
